src/objects/Value_Delivery_Session__c.object
<CustomObject>
    <description>TOOLKIT</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>To store Session Details.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>To capture Value Delivery Session End Date And Time</description>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Releases__c</fullName>
        <description>Add Session to The Existing Project</description>
        <label>Releases</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Value Delivery Sessions</relationshipLabel>
        <relationshipName>Value_Delivery_Sessions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>To capture Value Delivery Session Start Date And Time</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <label>Value Delivery Session</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Value Delivery Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Value Delivery Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Validate_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>End_Date__c &lt;  Start_Time__c</errorConditionFormula>
        <errorMessage>Session end date should be greater than start date.</errorMessage>
    </validationRules>
</CustomObject>